# eob-cli

./: .gitignore  README.md  extract_eob.py  main.py  pyproject.toml  requirements.txt
docs/: cli.md  eob-extraction-process.md  extraction-chain.md  problem-statement.md  setup.md  what-is-an-eob.md
docs/usecases/: cli.md  file-reader.md
extracted_eob_documents/: docments.json
src/: cli.py  config.py  util.py
src/exceptions/: file_path.py
src/extraction/: eob_extractor.py
src/extraction/llm/: gemini_flash.py
src/extraction/prompt/: extract_data_prompt_template.py  prompts.py
src/extraction/structured_output/: document_metadata_aggregator.py  extraction_structured_output.py  output_merger.py
src/ingestion/: eob_ingester.py  file_ingester.py  file_type_branch.py  pdf_file_reader.py  zip_file_extractor.py
src/ingestion/file_path_validator/: file_path_validator.py
src/ingestion/file_reader/: base_file_reader.py  pdf_file_reader.py  zip_file_reader.py
src/ingestion/runnables/: file_type_branch.py  zip_file_extractor.py
src/output/: console_output.py  file_output.py
tests/extraction/: test_eob_extractor.py
tests/extraction/prompt/: test_extract_data_prompt_template.py  test_prompts.py
tests/extraction/structured_output/: test_extraction_structured_output.py
tests/ingestion/: test_file_exists_validator.py  test_file_ingester.py  test_file_path_validator.py  test_pdf_file_reader.py
tests/ingestion/file_path_validator/: test_file_path_validator.py  test_file_type_validator.py
tests/util/: file_system.py
(+6 files in other folders)
