[project]
name = "eob-cli"
version = "0.1.0"
description = "A Command Line Tool to extract structured JSON data from Explanation of Benefits Files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "langchain-community>=0.3.27",
    "langchain[google-genai]>=0.3.27",
    "pypdf>=6.0.0",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "python-dotenv>=1.1.1",
    "reportlab>=4.4.3",
    "typer>=0.16.1",
]
